updated for RHEL9 and AAP 2.2

--- a/tasks/satellite_upload.yml
+++ b/tasks/satellite_upload.yml
@@ -39,7 +39,7 @@
     password: "{{ satellite_password }}"
     server_url: "{{ satellite_server }}"
     validate_certs: "{{ satellite_validate_certs | default('False') }}"
-    src: "ansible-automation-platform-latest-installer.tar.gz"
+    src: "{{ lookup('env','PWD') }}/data/ansible-automation-platform-latest-installer.tar.gz"
     repository: "{{ satellite_repository }}"
     product: "{{ satellite_product }}"
     organization: "{{ satellite_organization }}"
@@ -50,7 +50,7 @@
     password: "{{ satellite_password }}"
     server_url: "{{ satellite_server }}"
     validate_certs: "{{ satellite_validate_certs | default('False') }}"
-    src: "ansible-automation-platform-latest-bundle-installer.tar.gz"
+    src: "{{ lookup('env','PWD') }}/data/ansible-automation-platform-latest-bundle-installer.tar.gz"
     repository: "{{ satellite_repository }}"
     product: "{{ satellite_product }}"
     organization: "{{ satellite_organization }}"
