--- a/tasks/api_downloader.yml
+++ b/tasks/api_downloader.yml
@@ -11,6 +11,7 @@
     url: 'https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token'
     method: POST
     body_format: form-urlencoded
+    force: true
     body:
       grant_type: refresh_token
       client_id: rhsm-api
