--- a/tasks/api_downloader.yml
+++ b/tasks/api_downloader.yml
@@ -43,12 +43,14 @@
     dest: "{{ lookup('env','PWD') }}/data/{{ downloader_list[1].filename }}"
     headers:
       Authorization: "Bearer {{ login.json.access_token }}"
+    timeout: 60
 - name: Downloading the latest bundled installer "{{ downloader_list[0].imageName }}"
   get_url:
     url: "https://api.access.redhat.com/management/v1/images/{{ downloader_list[0].checksum }}/download"
     dest: "{{ lookup('env','PWD') }}/data/{{ downloader_list[0].filename }}"
     headers:
       Authorization: "Bearer {{ login.json.access_token }}"
+    timeout: 60
 - name: Creating symlink for the downloaded files (online installer)
   file:
     src: "{{ lookup('env','PWD') }}/data/{{ downloader_list[1].filename }}"
